# rqtl-mqm

./: .gitignore  .gitmodules  CMakeLists.txt  README.rdoc  win32testversion.rar
R/: MQMsnow.R  MQMtry.R
mpiMQM/: mpiMQM.cpp
scripts/: create-diff.sh  regression_tests.sh
src/: CMakeLists.txt  MQMRegression.cpp  MQMScan.h  MQMdata.cpp  MQMdata.h  MQMinterfaces.h  MQMmain.cpp  MQMmapQTL.cpp  MQMmixture.cpp  MQMprob.cpp  MQMreDefine.h  MQMscan.cpp  MQMsupport.cpp  MQMutil.cpp  MQMutil.h  Multiprocessor.cpp  Multiprocessor.h  mqm.h  mqmmain.cpp  mqmmixture.h  mqmscan.h
test/: MQM_test0.txt
